added routing for index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 <!-- home page content -->
 
 <div class="container">
-    {% for news, description, link, i, time, content in content %}
+    {% for news, description, link, i, time, content in context %}
 
     <div><h3>News</h3>{{news}}</div>
     <div><h4>Description</h4>{{description}}</div>
