--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -13,21 +13,9 @@
 </head>
 
 <body>
-    <!-- navbar -->
-    <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-      </ul>
-<!-- home page content -->
+    <!-- sports content -->
 
-<div class="container">
+<div class="card">
     {% for news, description, link, i, time, content in context %}
 
     <div><h3>News</h3>{{news}}</div>
