--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,13 +19,15 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/sports">SPORT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Services</a>
         </li>
       </ul>
 <!-- home page content -->
+
+
 
 <div class="container">
     {% for news, description, link, i, time, content in context %}
