--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -9,23 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Document</title>
+    <title>Sport News</title>
 </head>
 
 <body>
     <!-- sports content -->
+    <h3>SPORT NEWS</h3>
 
-<div class="card">
-    {% for news, description, link, i, time, content in context %}
 
-    <div><h3>News</h3>{{news}}</div>
-    <div><h4>Description</h4>{{description}}</div>
-    <div><h2>Link</h2>{{link}}</div>
-    <div><img src="{{i}}" alt=""></div>
-    <div><h5>Time</h5>{{time}}</div>
-    <div><h5>Content</h5>{{content}}</div>
+    <div class="container">
+        {% for news, description, link, i, time, content in context %}
 
-    {% endfor %}
-</div>
+        <div>
+            <h3>News</h3>{{news}}
+        </div>
+        <div>
+            <h4>Description</h4>{{description}}
+        </div>
+        <div>
+            <h2>Link</h2>{{link}}
+        </div>
+        <div><img src="{{i}}" alt=""></div>
+        <div>
+            <h5>Time</h5>{{time}}
+        </div>
+        <div>
+            <h5>Content</h5>{{content}}
+        </div>
+
+        {% endfor %}
+    </div>
 </body>
+
 </html>
