--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,9 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#">Health</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/sports">SPORT</a>
         </li>
         <li class="nav-item">
