--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Health</a>
+          <a class="nav-link" href="/health">Health</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sports">SPORT</a>
