--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="/sports">SPORT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Business</a>
+          <a class="nav-link" href="/business">Business</a>
         </li>
       </ul>
 <!-- home page content -->
