styled the business.html

--- a/app/templates/business.html
+++ b/app/templates/business.html
@@ -14,10 +14,7 @@
 
 <body>
     <!-- sports content -->
-    <h3>Business Updates</h3>
-
-
-    
+    <h3 class="text-center">Business Updates</h3> 
   <div class="container-fluid">
     <div class="row">
       {% for news, description, link, i, time, content in context %}
