added README.md file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
   <!-- navbar sample -->
   <nav class="navbar">
 
-    <div class="navbar-links d-flex">
+    <div class="navbar-links">
       <ul class="navbar-nav">
         <li class="nav-item">NEWS UPDATE</li>
 
