--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,3 +8,9 @@
     background-color: #333;  
     color: white;
 }
+.navbar-links li {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-left: 20px
+}
