--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- sports content -->
-    <h3>SPORT NEWS</h3>
+    <h3 class="text-center">SPORT NEWS</h3>
 
 
    
@@ -22,7 +22,7 @@
     <div class="row">
       {% for news, description, link, i, time, content in context %}
       <div class="col-md-4 d-flex justify-content-center">
-        <div class="card mb-3 bg-info text-white mt-4">
+        <div class="card mb-3 bg-info text-white mt-2">
 
           <div>
             <h6 class="text-center">News</h6>{{news}}
