styled the navbar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,12 @@
 
 <body>
   <!-- navbar sample -->
-  <nav class="navbar">
+  <nav class="container-fluid navbar">
+    <div class="nav-item">NEWS UPDATE</div>
 
     <div class="navbar-links">
-      <ul class="navbar-nav">
-        <li class="nav-item">NEWS UPDATE</li>
+      <ul class="navbar-nav d-flex flex-row">
+        
 
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
@@ -30,7 +31,7 @@
           <a class="nav-link" href="/sports">SPORT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/business">Business</a>
+          <a class="nav-link pr-2" href="/business">Business</a>
         </li>
 
       </ul>
