--- a/app/templates/CNN.html
+++ b/app/templates/CNN.html
@@ -9,12 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Business Updates</title>
+    <title>CNN Updates</title>
 </head>
 
 <body>
     <!-- sports content -->
-    <h3 class="text-center">Business Updates</h3> 
+    <h3 class="text-center">CNN Updates</h3> 
   <div class="container-fluid">
     <div class="row">
       {% for news, description, link, i, time, content in context %}
@@ -22,14 +22,13 @@
         <div class="card mb-3 bg-info text-white mt-2">
 
           <div>
-            <h6 class="text-center"> Business News</h6>{{news}}
+            <h6 class="text-center">CNN News</h6>{{news}}
           </div>
           <p class="card-text text-center" style="color:red">Description</p>{{description}}
 
           <p class="card-text text-center" style="color:brown">Link</p>{{link}}
-
           <img src="{{i}}" class="card-img image-fluid" alt="">
-          <p class="card-text"></p>Date Published: {{time}}
+          <div class="card-text"></div>Date Published: {{time}}
           <p class="card-text">Content</p>{{content}}
 
         </div>
