--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="/sports">SPORT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pr-2" href="/business">Business</a>
+          <a class="nav-link pr-2" href="/CNN">CNN</a>
         </li>
 
       </ul>
@@ -46,12 +46,10 @@
       {% for news, description, link, i, time, content in context %}
       <div class="col-md-4 d-flex justify-content-center">
         <div class="card mb-3 bg-info text-white mt-4">
-
           <div>
             <h6 class="text-center">News</h6>{{news}}
           </div>
           <p class="card-text text-center" style="color:red">Description</p>{{description}}
-
           <p class="card-text text-center" style="color:brown">Link</p>{{link}}
 
           <img src="{{i}}" class="card-img image-fluid" alt="">
