--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/health">Health</a>
+          <a class="nav-link" href="/News24">News 24</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sports">SPORT</a>
