--- a/app/templates/News24.html
+++ b/app/templates/News24.html
@@ -9,12 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Health Updates</title>
+    <title>News 24 Updates</title>
 </head>
 
 <body>
     <!-- sports content -->
-    <h3>Health Updates</h3>
+    <h3 class="text-center">News 24 Updates</h3>
     <div class="container-fluid">
         <div class="row">
             {% for news, description, link, i, time, content in context %}
