renamed a template file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/News24">News 24</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sports">SPORT</a>
+          <a class="nav-link" href="/ESPN">ESPN</a>
         </li>
         <li class="nav-item">
           <a class="nav-link pr-2" href="/CNN">CNN</a>
