--- a/app/templates/CNN.html
+++ b/app/templates/CNN.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>CNN Updates</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+  <title>CNN Updates</title>
 </head>
 
 <body>
-    <!-- sports content -->
-    <h3 class="text-center">CNN Updates</h3> 
+  <!-- sports content -->
+  <h3 class="text-center">CNN Updates</h3>
   <div class="container-fluid">
     <div class="row">
       {% for news, description, link, i, time, content in context %}
@@ -26,7 +26,9 @@
           </div>
           <p class="card-text text-center" style="color:red">Description</p>{{description}}
 
-          <p class="card-text text-center" style="color:brown">Link</p>{{link}}
+          <a href="{{link}}">
+            <p class="card-text text-center" style="color:brown">Link</p>
+          </a>
           <img src="{{i}}" class="card-img image-fluid" alt="">
           <div class="card-text"></div>Date Published: {{time}}
           <p class="card-text">Content</p>{{content}}
