--- a/app/templates/ESPN.html
+++ b/app/templates/ESPN.html
@@ -25,7 +25,7 @@
         <div class="card mb-3 bg-info text-white mt-2">
 
           <div>
-            <h6 class="text-center">News</h6>{{news}}
+            <h6 class="text-center" style="color: blue"> BBC News</h6>{{news}}
           </div>
           <p class="card-text text-center" style="color:red">Description</p>{{description}}
 
