--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,15 +39,13 @@
   </nav>
   <!-- home page content -->
 
-
-
   <div class="container-fluid">
     <div class="row">
       {% for news, description, link, i, time, content in context %}
       <div class="col-md-4 d-flex justify-content-center">
         <div class="card mb-3 bg-info text-white mt-4">
           <div>
-            <h6 class="text-center">News</h6>{{news}}
+            <h6 class="text-center" style="color:blue">BBC News</h6>{{news}}
           </div>
           <p class="card-text text-center" style="color:red">Description</p>{{description}}
           <a href="{{link}}">
